--- a/src/index.html
+++ b/src/index.html
@@ -7,23 +7,23 @@
   <!-- Primary Meta Tags -->
   <title>Nehar Harpreet | UX/UI Developer | Software Engineer</title>
   <meta name="title" content="Nehar Harpreet | UX/UI Developer | Software Engineer">
-  <meta name="description" content="BESCHREIBUNG">
+  <meta name="description" content="Hi, my name is Harpreet and I'm a passionate Designer and Software Engineer. After completing a higher technical school in Computer Science, I'm currently finishing my Bachelor's degree in the same field. In my free time, I love editing pictures and creating my own designs. My diverse skill set allows me to bring a unique perspective to every project I work on. If you have any questions or want to collaborate, don't hesitate to reach out at harpreetneharyt@gmail.com.">
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://mufeez1.github.io/muffeez/">
+  <meta property="og:url" content="https://github.com/Harpreet-N">
   <meta property="og:title"
-    content="Muffeez Khalid | MEAN Stack Developer | MERN Stack Development | Software Engineer">
-  <meta property="og:description" content="As a software engineer with expertise in both MEAN and MERN stacks, I have a comprehensive understanding of full-stack web development. My strong foundation in JavaScript allows me to effectively work with front-end technologies such as Angular and React, as well as back-end technologies such as Node.js and Express.">
-  <meta property="og:image" content="https://mufeez1.github.io/muffeez/assets/images/preview.png">
+    content="Nehar Harpreet | UX/UI Developer | Software Engineer">
+  <meta property="og:description" content="Hi, my name is Harpreet and I'm a passionate Designer and Software Engineer. After completing a higher technical school in Computer Science, I'm currently finishing my Bachelor's degree in the same field. In my free time, I love editing pictures and creating my own designs. My diverse skill set allows me to bring a unique perspective to every project I work on. If you have any questions or want to collaborate, don't hesitate to reach out at harpreetneharyt@gmail.com.">
+<!--  <meta property="og:image" content="https://mufeez1.github.io/muffeez/assets/images/preview.png">-->
 
-  <!-- Twitter -->
-  <meta property="twitter:card" content="summary_large_image">
-  <meta property="twitter:url" content="https://mufeez1.github.io/muffeez/">
-  <meta property="twitter:title"
-    content="Muffeez Khalid | MEAN Stack Developer | MERN Stack Development | Software Engineer">
-  <meta property="twitter:description" content="As a software engineer with expertise in both MEAN and MERN stacks, I have a comprehensive understanding of full-stack web development. My strong foundation in JavaScript allows me to effectively work with front-end technologies such as Angular and React, as well as back-end technologies such as Node.js and Express.">
-  <meta property="twitter:image" content="https://mufeez1.github.io/muffeez/assets/images/preview.png">
+<!--  &lt;!&ndash; Twitter &ndash;&gt;-->
+<!--  <meta property="twitter:card" content="summary_large_image">-->
+<!--  <meta property="twitter:url" content="https://mufeez1.github.io/muffeez/">-->
+<!--  <meta property="twitter:title"-->
+<!--    content="Nehar Harpreet | UX/UI Developer | Software Engineer">-->
+<!--  <meta property="twitter:description" content="As a software engineer with expertise in both MEAN and MERN stacks, I have a comprehensive understanding of full-stack web development. My strong foundation in JavaScript allows me to effectively work with front-end technologies such as Angular and React, as well as back-end technologies such as Node.js and Express.">-->
+<!--  <meta property="twitter:image" content="https://mufeez1.github.io/muffeez/assets/images/preview.png">-->
 
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
